<resources>
    <string name="app_name">Demo Simple Click</string>
    <string name="button1">Display</string>
    <string name="textview1">Display what the user enters</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="toggleButtonEnabled" />
    <string name="rbMale">Male</string>
    <string name="rbFemale">Female</string>
</resources>